# project-fa

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/utils/generate/fresh_alert_api/: README.md  pyproject.toml
src/utils/generate/fresh_alert_api/fresh_alert/: __init__.py
src/utils/generate/fresh_alert_api/fresh_alert/models/: __init__.py  abridged_food_nutrient_dto.py  barcode_controller_create_product_response_200.py  barcode_controller_delete_product_by_barcode_response_200.py  barcode_controller_find_barcode_by_off_response_200.py  barcode_controller_search_response_200.py  barcode_response_model.py  create_barcode_input_dto.py  create_date_product_user_dto.py  date_controller_calculate_quantity_body.py  date_controller_calculate_quantity_response_200.py  date_controller_create_response_200.py  date_controller_extract_body.py  date_controller_extract_response_200.py  date_controller_find_all_by_user_response_200.py  date_controller_find_all_response_200.py  date_controller_find_one_response_200.py  date_controller_update_response_200.py  date_extract_response_dto.py  date_response_model.py  firebase_message_controller_migrate_current_user_response_200.py  firebase_user_input_model.py  firebase_user_model.py  food_data_central_controller_find_by_list_fdc_ids_format.py  food_search_criteria_dto.py  food_search_criteria_dto_data_type_item.py  food_search_criteria_dto_sort_by.py  food_search_criteria_dto_sort_order.py  food_search_criteria_dto_trade_channel_item.py  get_foods_search_data_type_item.py  get_foods_search_sort_by.py  (+32 more)
(+109 files in other folders)
